--- a/src/App.scss
+++ b/src/App.scss
@@ -42,3 +42,17 @@
   }
   
 }
+
+#Sidnav{
+  height: calc(100vh - 56px);
+}
+
+.pro-sidebar-inner{
+  background: #4a148c !important;
+}
+
+.move-icon{
+  height: 30px;
+  margin-right: 10px;
+  cursor: pointer;
+}
